--- a/index.html
+++ b/index.html
@@ -97,6 +97,86 @@
     </div>
 </div>
 
+			<section class="plan">
+    <div class="container-fluid">
+        <div class="row plan__wrapper">
+            <div class="col-6 plan__intro">
+                <div class="plan__subtitle">DESKTOP AND MOBILE APP</div>
+                <h2 class="plan__title">Plan <span class="plan__title--span">and</span> manage</h2>
+                <p class="plan__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata. Solum patrioque no sea. Mea ex malis mollis oporteat. Eum an expetenda consequat.</p>
+                <div class="plan__btns">
+                    <button class="plan__btn">View video</button>
+                    <button class="plan__btn">See features</button>
+                </div>
+            </div>
+            <div class="col-6"><img class="plan__img" src="assets/img/plan-img.png" /></div>
+            
+        </div>
+    </div>
+</section>
+			<section class="about">
+    <div class="container">
+        <div class="row about__inner">
+            <div class="col-8">
+                <div class="about__subtitle">About us</div>
+                <h2 class="about__title">Read about our app</h2>
+                <div class="row about__list">
+                    <div class="col-2 about__item">
+                        <div class="about__item-img">
+                            <img src="assets/img/about-1.svg" alt="images">
+                        </div>
+                        <h4 class="about__item-title">Overview</h4>
+                        <p class="about__item-text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.</p>
+                    </div>
+                    <div class="col-2 about__item">
+                        <div class="about__item-img">
+                            <img src="assets/img/about-2.svg" alt="images">
+                        </div>
+                        <h4 class="about__item-title">Files</h4>
+                        <p class="about__item-text">No vim nulla vitae intellegat. Ei enim error ius, solet atomorum conceptam ex has.</p>
+                    </div>
+                    <div class="col-2 about__item">
+                        <div class="about__item-img">
+                            <img src="assets/img/about-3.svg" alt="images">
+                        </div>
+                        <h4 class="about__item-title">Meeting chats</h4>
+                        <p class="about__item-text">Vim ne tacimates neglegentur. Erat diceret omittam at est.</p>
+                    </div>
+                    <div class="col-2 about__item">
+                        <div class="about__item-img">
+                            <img src="assets/img/about-4.svg" alt="images">
+                        </div>
+                        <h4 class="about__item-title">Save events</h4>
+                        <p class="about__item-text">Nisl idque mel ea, nominati voluptatum.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-center">
+                <div class="col-4 d-flex justify-content-between align-items-center">
+                    <button class="about__btn">Read more</button>
+                    <span class="about__btn-or">or</span>
+                    <button class="about__btn">Get started</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+			<div class="statistics">
+    <div class="container-fluid">
+        <div class="row statistics__list">
+            <div class="col statistics__item">
+                <img src="assets/img/static-1.svg" />
+                <p class="statistics__item-num">89%</p>
+                <p class="statistics__item-text">Customers who have increased their productivity</p>
+            </div>
+            <div class="col statistics__item">
+                <img src="assets/img/static-2.svg" />
+                <p class="statistics__item-num">3123</p>
+                <p class="statistics__item-text">Users who have used our application</p>
+            </div>
+        </div>
+    </div>
+</div>
 		</main>
 		<!-- JavaScript Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
