feat: add sections

--- a/index.html
+++ b/index.html
@@ -177,6 +177,128 @@
         </div>
     </div>
 </div>
+			<section class="resources">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col d-flex flex-column align-items-center">
+                <p class="resources__subtitle">OUR RESOURCES</p>
+                <h2 class="resources__title">Start reading our blog</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col d-flex">
+                <div class="swiper-container resources__swiper">
+                    <div class="swiper-wrapper resources__swiper-wrapper">
+                        <div class="swiper-slide resources__swiper-slide">
+                            <article class="resources__article">
+                                <div class="resources__article-images">
+                                    <img class="resources__article-image"  src="assets/img/our-1.jpg" />
+                                    <img class="resources__article-image" src="assets/img/our-2.jpg" />
+                                    <img class="resources__article-image" src="assets/img/our-3.jpg" />
+                                </div>
+                                <div class="resources__article-intro">
+                                    <h1 class="resources__article-title">How to start planning</h1>
+                                    <p class="resources__article-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti. Natum petentium principes mei ea. Tota everti periculis vis ei, quas tibique pro at, eos ut decore ...
+                                    </p>
+                                    <div class="resources__article-links">
+                                        <a href="#" class="resources__article-link">Read now</a>
+                                        <a href="#" class="resources__article-link">Add to your bookmarks</a>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="swiper-slide resources__swiper-slide">
+                            <article class="resources__article">
+                                <div class="resources__article-images">
+                                    <img class="resources__article-image"  src="assets/img/our-1.jpg" />
+                                    <img class="resources__article-image" src="assets/img/our-2.jpg" />
+                                    <img class="resources__article-image" src="assets/img/our-3.jpg" />
+                                </div>
+                                <div class="resources__article-intro">
+                                    <h1 class="resources__article-title">How to start planning</h1>
+                                    <p class="resources__article-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti. Natum petentium principes mei ea. Tota everti periculis vis ei, quas tibique pro at, eos ut decore ...
+                                    </p>
+                                    <div class="resources__article-links">
+                                        <a href="" class="resources__article-link">Read now</a>
+                                        <a href="" class="resources__article-link">Add to your bookmarks</a>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="swiper-slide resources__swiper-slide">
+                            <article class="resources__article">
+                                <div class="resources__article-images">
+                                    <img class="resources__article-image"  src="assets/img/our-1.jpg" />
+                                    <img class="resources__article-image" src="assets/img/our-2.jpg" />
+                                    <img class="resources__article-image" src="assets/img/our-3.jpg" />
+                                </div>
+                                <div class="resources__article-intro">
+                                    <h1 class="resources__article-title">How to start planning</h1>
+                                    <p class="resources__article-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti. Natum petentium principes mei ea. Tota everti periculis vis ei, quas tibique pro at, eos ut decore ...
+                                    </p>
+                                    <div class="resources__article-links">
+                                        <a href="" class="resources__article-link">Read now</a>
+                                        <a href="" class="resources__article-link">Add to your bookmarks</a>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+			<section class="testimonials">
+    <div class="container-fluid">
+        <div class="row testimonials__inner">
+            <div class="col-4">
+                <p class="testimonials__subtitle">TESTIMONIALS</p>
+                <h2 class="testimonials__title">Customers's quotes</h2>
+                <p class="testimonials__text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an.</p>
+            </div>
+            <div class="col-5 swiper-container testimonials__feedback testimonials__slider">
+                <div class="swiper-wrapper testimonials__slider-wrapper">
+                    <div class="swiper-slide testimonials__slider-slide">
+                        <p class="testimonials__feedback-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                        </p>
+                        <img class="testimonials__feedback-user" src="assets/img/feedback.png" />
+                    </div>
+                    <div class="swiper-slide testimonials__slider-slide">
+                        <p class="testimonials__feedback-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                        </p>
+                        <img class="testimonials__feedback-user" src="assets/img/feedback.png" />
+                    </div>
+                    <div class="swiper-slide testimonials__slider-slide">
+                        <p class="testimonials__feedback-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                        </p>
+                        <img class="testimonials__feedback-user" src="assets/img/feedback.png" />
+                    </div>
+                    <div class="swiper-slide testimonials__slider-slide">
+                        <p class="testimonials__feedback-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                        </p>
+                        <img class="testimonials__feedback-user" src="assets/img/feedback.png" />
+                    </div>
+                    <div class="swiper-slide testimonials__slider-slide">
+                        <p class="testimonials__feedback-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                        </p>
+                        <img class="testimonials__feedback-user" src="assets/img/feedback.png" />
+                    </div>
+                    <div class="swiper-slide testimonials__slider-slide">
+                        <p class="testimonials__feedback-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                        </p>
+                        <img class="testimonials__feedback-user" src="assets/img/feedback.png" />
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+    </div>
+</section>
 		</main>
 		<!-- JavaScript Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
